syntax = "proto3";

package juno.api_key;

import "identifiers.proto";

service ApiKeyService {
  rpc issueApiKey(IssueApiKeyRequest) returns (IssueApiKeyResponse);
  rpc createApiKey(CreateApiKeyParams) returns (ApiKey);
  rpc revokeApiKey(RevokeApiKeyRequest) returns (RevokeApiKeyResponse);
}

message IssueApiKeyRequest {
  string project_name = 1;
  string email = 2;
  string password = 3;
  string environment = 4;
  string description = 5;
  bool userVisible = 6;
}

message CreateApiKeyParams {
  ApiKey apiKey = 1;
}

enum ApiScopes {
  FULL = 0;
}

message ApiKey {
  string hash = 1;
  string uuid = 2;
  string environment = 3;
  string description = 4;
  bool userVisible = 5;
  repeated ApiScopes scopes = 6;
  identifiers.ProjectIdentifier project = 7;
}

message IssueApiKeyResponse {
  oneof response { string apiKey = 1; }
}

message RevokeApiKeyRequest {}
message RevokeApiKeyResponse {}